...
        },
        onClick = { /* no-op */},
        enabled = false)

    // --- Settings
    DropdownMenuItem(
        text = { Text("Settings") },
        onClick = {
          onDismiss()
          onOpenSettings()
        })

    Divider()
...
